# AutoToucher

./: .clang-tidy  CMakeLists.txt  main.cpp
config/: config.json  test.json
docs/uml/: configurator.class.jet
src/: CMakeLists.txt
src/engine/: CMakeLists.txt  mouse_clicker.cpp
src/gui/: CMakeLists.txt  graph_view.cpp  mainwindow.cpp  slidepage.cpp
src/gui/resource/: resource.qrc
src/include/configurator/: auto_config.h
src/include/engine/: common.h  engine_exception.h  mouse_clicker.h
src/include/gui/: graph_view.h
test/: CMakeLists.txt  test_base.cpp  test_serialize.cpp
third_part/: CMakeLists.txt
